--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Download semua file, lalu buka file index.html di browser :)",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon ./src/main.js",
+    "prod": "pm2 start ./src/main.js"
   },
   "repository": {
     "type": "git",
@@ -18,5 +19,8 @@
   "homepage": "https://github.com/azharfatrr/Al-Quran#readme",
   "dependencies": {
     "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.12"
   }
 }
