--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "main.js",
   "scripts": {
     "dev": "nodemon ./src/main.js",
-    "prod": "pm2 start ./src/main.js"
+    "prod": "pm2 start ./src/main.js",
+    "start": "node ./src/main.js"
   },
   "repository": {
     "type": "git",
